[package]
name = "kraken_rest_api"
version = "0.1.0"
edition = "2018"
license = "MIT"
description = "Kraken REST API"
homepage = "https://infidev.co.uk"
documentation = "https://docs.rs/kraken_rest_api"
repository = "https://github.com/codeandplay/kraken_api_rest"
readme = "README.md"
keywords = ["kraken", "rest", "api"]
categories = ["web-programming::http-client"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
pretty_env_logger = "0.2"
env_logger = "0.5"
dotenv = "0.13"
tokio = { version = "1.0.1", features = ["time", "macros", "rt-multi-thread"]}
chrono = "0.4.19"
async-trait = "0.1.42"
rand = "0.8.0"
reqwest = { version = "0.10.10", features = ["blocking", "json"] }
serde = "1.0.118"
serde_derive = "1.0.118"
serde_json = "1.0.61"
ring = { version = "0.16.19"}
data-encoding = { version = "2.3.1" }
urlencoding = {version = "1.1.1"}
